clearing up loose ends

--- a/frontend/public/culinariacultura.html
+++ b/frontend/public/culinariacultura.html
@@ -15,9 +15,9 @@
             <ul class="menu">
                 <li><a href="index.html">Página Inicial</a></li>
                 <li><a href="sobre.html">Sobre o Maranhão</a></li>
-                <li><a href="#destinos-e-atracoes">Destinos e Atrações</a></li>
+                <li><a href="destinosatracoes.html">Destinos e Atrações</a></li>
                 <li><a href="culinariacultura.html">Culinaria e Cultura</a></li>
-                <li><a href="#tradicoes-e-eventos">Tradições e Eventos</a></li>
+                <li><a href="tradicoeseventos.html">Tradições e Eventos</a></li>
                 <li><a href="motivos.html">Motivos para Visitar</a></li>
             </ul>
         </nav>
@@ -27,7 +27,7 @@
         <section id="pratos-tipicos">
             
         </section>
-        <section id="atos-culturais">
+        <section id="info-cultural">
 
         </section>
     </main>
