--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -79,6 +79,9 @@
                     <h3>Delta do Rio Parnaíba</h3>
                 </div>
             </div>
+            <div>
+
+            </div>
         <section id="map", class="map"></section>
     </main>
 
