--- a/frontend/public/tradicoeseventos.html
+++ b/frontend/public/tradicoeseventos.html
@@ -15,7 +15,7 @@
             <ul class="menu">
                 <li><a href="index.html">Página Inicial</a></li>
                 <li><a href="sobre.html">Sobre o Maranhão</a></li>
-                <li><a href="#destinos-e-atracoes">Destinos e Atrações</a></li>
+                <li><a href="destinosatracoes.html">Destinos e Atrações</a></li>
                 <li><a href="culinariacultura.html">Culinaria e Cultura</a></li>
                 <li><a href="tradicoeseventos.html">Tradições e Eventos</a></li>
                 <li><a href="motivos.html">Motivos para Visitar</a></li>
