--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -79,10 +79,11 @@
                     <h3>Delta do Rio Parnaíba</h3>
                 </div>
             </div>
+        <section id="map", class="map">
             <div>
-
+                
             </div>
-        <section id="map", class="map"></section>
+        </section>
     </main>
 
     <footer>
