more fixing and cleanup

--- a/frontend/public/culinariacultura.html
+++ b/frontend/public/culinariacultura.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Culinaria e Cultura</title>
 
-    <link rel="stylesheet" href="../public/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header class="main-header">
@@ -25,10 +25,10 @@
     </header>  
     <main id="food-culture-content">
         <section id="pratos-tipicos">
-            
+            <P> WIP - Work in Progress </P>
         </section>
         <section id="info-cultural">
-
+            <P> WIP - Work in Progress </P>
         </section>
     </main>
     <section>
