more fixes for render

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -42,7 +42,7 @@
             <div class="carousel-slide" style="background-image: url('images/carousel-images/lencoismaranhenses.png');">
                 <h2>Barreirinhas: Rota dos Lençóis</h2>
             </div>
-            <div class="carousel-slide" style="background-image: url('/images/carousel-images/saomatias2.png');">
+            <div class="carousel-slide" style="background-image: url('images/carousel-images/saomatias2.png');">
                 <h2>Alcântara: Patrimônio Histórico</h2>
             </div>
             <div class="carousel-slide" style="background-image: url('images/carousel-images/chapmesas1.png');">
@@ -79,8 +79,8 @@
                     <h3>Delta do Rio Parnaíba</h3>
                 </div>
             </div>
-        <section id="map", class="map">
-            <div>
+        <section id="map", class="map-main">
+            <div id="destinos-all">
                 
             </div>
         </section>
