--- a/frontend/public/sobre.html
+++ b/frontend/public/sobre.html
@@ -41,7 +41,7 @@
         </section>
     </main>
     <section>
-        <img id="mapa-ma", src="../public/images/site-images/flagmap_ma.png", alt="Mapa Estadual do Maranhão Decorativo, com destaque para as respectivas fronteiras intramunicipais">
+        <img id="mapa-ma", src="images/site-images/flagmap_ma.png", alt="Mapa Estadual do Maranhão Decorativo, com destaque para as respectivas fronteiras intramunicipais">
     </section>
     <footer>
         <p>&copy: 2024 - Turismar, Seu Guia Turístico do Maranhão. Todos os direitos reservados</p>
