--- a/frontend/public/destinosatracoes.html
+++ b/frontend/public/destinosatracoes.html
@@ -23,11 +23,14 @@
         </nav>
         </div>
     </header>  
-    <main id="events-content">
-        <section id="events-data">
+    <main id="destinos-content">
+        <section id="destinos-info">
             <p>
 
             </p>
+        </section>
+        <section id="atrativos-info">
+
         </section>
     </main>
     <section></section>
