--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -29,7 +29,7 @@
         </nav>
         </div>
         <div class="search-container">
-            <input type="text", id="search-bar" placeholder="Buscar destino...">
+            <input type="text", id="search-bar" placeholder="Buscar destino..." autocomplete="on">
             <button id="search-btn">Buscar</button>
         </div>
     </header>   
@@ -52,7 +52,7 @@
                 <h2>Tutoia: Delta do Rio Parnaíba</h2>
             </div>
         </section>
-        <section id="attractions">
+        <section id="grid-atracoes">
             <div class="grid-container">
                 <div class="grid-item" style="background-image: url('images/grid-images/MHAM_interior.png');" onclick="location.href='detalhes.html?destino=sao-luis'">
                     <h3>Museu Histórico e Artístico do Maranhão (MHAM)</h3>
