--- a/frontend/public/destinosatracoes.html
+++ b/frontend/public/destinosatracoes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tradições e Eventos</title>
+    <title>Destinos e Atrações</title>
 
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -25,12 +25,19 @@
     </header>  
     <main id="destinos-content">
         <section id="destinos-info">
-            <p>
-
-            </p>
+            <h2> => Destinos Principais ou mais Conhecidos:</h2>
+            <ul id="lista-destinos">
+                <li>São Luís do Maranhão</li>
+                <li>Barreirinhas</li>
+                <li>Carolina</li>
+            </ul>
         </section>
         <section id="atrativos-info">
-
+            <h2> => Atrativos Principais, com respectiva cidade: </h2>
+            <ul id="lista-atrativos">
+                <li>Palácio dos Leões (São Luís)</li>
+                <li>Teatro João do Vale (São Luís)</li>
+            </ul>
         </section>
     </main>
     <section></section>
